# RFI_identification

./: .gitignore  CMakeLists.txt  CUDA_README.md  Makefile  README.md  addPulsarDataPipeline.sh  automation.sh  cmd.sh  parkes-default.lua  probeCUDA.cu  requirements.txt  run.sh  sample_datasets.py  split_dataset.py  test_cuda.c  test_cuda_switch.sh  visualize_validation_results.py
PyReadFASTData/: PyReadFASTData.py
ShellScripts/: DatasetGenerationCmd.sh  addPulsarDataPipeline.sh  run_inference_comparison.sh
benchmark/: gprof_O3_fopenmp.txt  gprof_O3_marchnative_ffastmath.txt  gprof_O3_marchnative_ffastmath_fullrun.txt  gprof_O3_marchnative_ffastmath_fullrun_1.txt  gprof_O3_marchnative_ffastmath_fullrun_2_2048chan.txt  gprof_O3_marchnative_ffastmath_funrollloop_flto_fullrun.txt  gprof_O3_marchnative_ffastmath_funrollloops_flto.txt  gprof_findMeanStd_noomp.txt  gprof_findMeanStd_noomp_1.txt  gprof_findMeanStd_noomp_withoutifdef.txt  gprof_findMeanStd_restructST.txt  gprof_findMeanStd_withomp.txt  gprof_findMinMax_noomp.txt  gprof_findMinMax_omp.txt
include/: ReadFASTData.h  alg_CLFD.h  alg_IQRM.h  cmd.h  cuda_acceleration.h  findStats.h  identification.h  mask.h  plot.h  psrPalett.h  transpose.h
output/: G200.14+2.80_20250802_block0.fits  G200.14+2.80_20250802_block1.fits  G200.14+2.80_20250802_block10.fits  G200.14+2.80_20250802_block11.fits  G200.14+2.80_20250802_block2.fits  G200.14+2.80_20250802_block3.fits  G200.14+2.80_20250802_block4.fits  G200.14+2.80_20250802_block5.fits  G200.14+2.80_20250802_block6.fits  G200.14+2.80_20250802_block7.fits  G200.14+2.80_20250802_block8.fits  G200.14+2.80_20250802_block9.fits
src/: AI_RFI.py  CompareGTInfer.py  EvaluateRFI.py  InferOnServer.py  PointRFIEnhancer.py  RFISimulator.py  ReadFASTData.c  SegFormer.py  SegFormerOnServer copy.py  SegFormerOnServer.py  SegFormerValOne.py  SegFormer_StrategyAltered.py  SinglePulseCluster.py  TrainingOnServer.py  UNet copy.py  UNet.py  UNetOnServer.py  ValidateEngine.py  add_axes.py  alg_CLFD.c  alg_IQRM.c  analyze_pulsar_preservation.py  aoflagger_mask.py  batch_inference.py  (+44 more)
